@@ -401,9 +401,9 @@ if ( ! class_exists( 'WC_Connect_Shipping_Method' ) ) {
 			if ( ! $this->is_valid_package_destination( $package ) ) {
 				if ( is_cart() || is_checkout() ) {
 					foreach ( $this->package_validation_errors->errors as $code => $messages ) {
-						$data = $this->package_validation_errors->get_error_data( $code );
 						foreach ( $messages as $message ) {
-							wc_add_notice( $message, 'error', $data );
+							// Using debug instead of regular notice because the error always shows before customer enters any shipping information.
+							$this->debug( $message, 'error' );
 						}
 					}
 				}
